--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <title>Home | WeWash</title>
 </head>
-<body>
-<h1 style="text-align: center">WeWash Landing Page</h1>
+<body style="height: 100%; display: flex; align-items: center;justify-content: center;">
+<h1>WeWash Landing Page</h1>
 
 </body
 </html>
