issues resolved for about and faq page

--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
                 <div class="hr_line"></div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="about.html">About us</a>
             </li>
             <li>
                 <div class="hr_line"></div>
