--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="hr_line"></div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="about.html">About us</a>
             </li>
             <li>
                 <div class="hr_line"></div>
@@ -59,7 +59,7 @@
     <div class="col-7">
         <div class="text-hold-container">
             <div class="text-hold">
-                <h1>Lorem Ipsum is simply dummy text of the printing</h1>
+                <h2>Lorem Ipsum is simply dummy text of the printing</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     been
                     the industry's</p>
