--- a/about.html
+++ b/about.html
@@ -15,16 +15,15 @@
 </head>
 
 <body>
-
 <nav class="header-navbar navbar navbar-expand-lg navbar-expand-sm">
     <a class="navbar-brand" href="index.html">
         <img src="images/logo.svg" alt="WeWash Logo">
     </a>
-    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
-            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
+    <button id="navToggleBtn" class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+            data-target="#mobileNav" aria-controls="mobileNav" aria-expanded="false">
         <span class="navbar-toggler-icon"></span>
     </button>
+
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -55,6 +54,34 @@
         Download
     </button>
 </nav>
+
+<div id="mobileNav" class="overlay">
+    <div class="overlay-content">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item mobile-nav-item">
+                <a class="nav-link" href="index.html#howItWorks">How it Works</a>
+            </li>
+            <li>
+                <div class="hr_line"></div>
+            </li>
+            <li class="nav-item mobile-nav-item">
+                <a class="nav-link" href="index.html#pricingPlans">Pricing plans</a>
+            </li>
+            <li>
+                <div class="hr_line"></div>
+            </li>
+            <li class="nav-item mobile-nav-item active">
+                <a class="nav-link" href="about.html">About us</a>
+            </li>
+            <li>
+                <div class="hr_line"></div>
+            </li>
+            <li class="nav-item mobile-nav-item">
+                <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 <div class="about-heading-container">
     <div class="about-header-section">
