--- a/faq.html
+++ b/faq.html
@@ -17,10 +17,11 @@
     <a class="navbar-brand" href="index.html">
         <img src="images/logo.svg" alt="WeWash Logo">
     </a>
-    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button id="navToggleBtn" class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+            data-target="#mobileNav" aria-controls="mobileNav" aria-expanded="false">
         <span class="navbar-toggler-icon"></span>
     </button>
+
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -51,6 +52,34 @@
         Download
     </button>
 </nav>
+
+<div id="mobileNav" class="overlay">
+    <div class="overlay-content">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item mobile-nav-item">
+                <a class="nav-link" href="index.html#howItWorks">How it Works</a>
+            </li>
+            <li>
+                <div class="hr_line"></div>
+            </li>
+            <li class="nav-item mobile-nav-item">
+                <a class="nav-link" href="index.html#pricingPlans">Pricing plans</a>
+            </li>
+            <li>
+                <div class="hr_line"></div>
+            </li>
+            <li class="nav-item mobile-nav-item">
+                <a class="nav-link" href="about.html">About us</a>
+            </li>
+            <li>
+                <div class="hr_line"></div>
+            </li>
+            <li class="nav-item mobile-nav-item active">
+                <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 <div class="faq-container">
     <div class="faq-header-section">
