updated hero img portion

--- a/index.html
+++ b/index.html
@@ -57,23 +57,30 @@
 
 <div class="hero-section-wrapper">
     <div class="hero-section-container">
-        <div class="hero-section">
-            <div class="row mx-0">
-                <div class="col-lg-10">
-                    <div class="text-hold-container">
-                        <div class="text-hold">
-                            <h2>Lorem Ipsum is simply dummy text of the printing</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has
-                                been
-                                the industry's</p>
-                            <button class="download-btn">
-                                Download App
-                            </button>
+        <div class="content-section">
+            <div class="hero-section">
+                <div class="row mx-0">
+                    <div class="col-sm-10">
+                        <div class="text-hold-container">
+                            <div class="text-hold">
+                                <h2>Lorem Ipsum is simply dummy text of the printing</h2>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum
+                                    has
+                                    been
+                                    the industry's</p>
+                                <button class="download-btn">
+                                    Download App
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="img-wrapper">
+            <img src="images/hero-img.png" class="desktop-img">
+            <img src="images/hero-img-mobile.svg" class="mobile-img">
         </div>
     </div>
 </div>
