wewash template completed

--- a/about.html
+++ b/about.html
@@ -149,7 +149,9 @@
                     <div class="avatar-container">
                         <img src="images/avtar4.svg" class="img-circle img-responsive">
                     </div>
-                    <img src="images/double_quote.svg" class="quote-mark">
+                    <div class="quote-mark-div">
+                        <img src="images/double_quote.svg" class="quote-mark">
+                    </div>
                     <div class="description-container">
                         <p>We make doing your laundry simple. We can save your time, so you can enjoy doing the things
                             you
