--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div class="img-wrapper">
             <img src="images/hero-img.png" class="desktop-img">
-            <img src="images/hero-img-mobile.svg" class="mobile-img">
+            <img src="images/hero-img-mobile.png" class="mobile-img">
         </div>
     </div>
 </div>
