--- a/index.html
+++ b/index.html
@@ -83,209 +83,202 @@
     </div>
 
 
-<<<<<<< HEAD
     <div class="hero-section-wrapper">
         <div class="hero-section-container">
-            <div class="hero-section">
-                <div class="row mx-0">
-                    <div class="col-lg-10">
-=======
-<div class="hero-section-wrapper">
-    <div class="hero-section-container">
-        <div class="content-section">
-            <div class="hero-section">
-                <div class="row mx-0">
-                    <div class="col-sm-10">
->>>>>>> 5843da7f3fae721149f8654e4e3858407e282786
-                        <div class="text-hold-container">
-                            <div class="text-hold">
-                                <h2>Lorem Ipsum is simply dummy text of the printing</h2>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum
-                                    has
-                                    been
-                                    the industry's</p>
-                                <button class="download-btn">
-                                    Download App
-                                </button>
+            <div class="content-section">
+                <div class="hero-section">
+                    <div class="row mx-0">
+                        <div class="col-sm-10">
+                            <div class="text-hold-container">
+                                <div class="text-hold">
+                                    <h2>Lorem Ipsum is simply dummy text of the printing</h2>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                        Ipsum
+                                        has
+                                        been
+                                        the industry's</p>
+                                    <button class="download-btn">
+                                        Download App
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="img-wrapper">
-            <img src="images/hero-img.png" class="desktop-img">
-            <img src="images/hero-img-mobile.png" class="mobile-img">
-        </div>
-    </div>
-
-    <section id="howItWorks" class="text-center how-it-works-section team-section">
-        <div class="container">
-            <h3>HOW IT WORKS</h3>
-            <div class="hr-line"></div>
-            <div class="row justify-content-center">
-                <div class="col-sm-4 package-wrapper package-wrapper-left">
-                    <div class="package-container package-top-positioned">
-                        <div class="package-btn">
-                            <button class="active-btn btn1">1</button>
-                        </div>
-                        <div class="package-content">
-                            <h5>Select Package</h5>
-                            <p>Pay for it, Using one of multiple <br>methods available.</p>
-                        </div>
-                    </div>
-                    <div class="mobile-view package-container hide">
-                        <div class="package-btn">
-                            <button class="btn2">2</button>
-                        </div>
-                        <div class="package-content">
-                            <h5>Get Notified</h5>
-                            <p>Pack laundry and hang outside <br>for pickup.</p>
-                        </div>
-                    </div>
-                    <div class="desktop-view package-container">
-                        <div class="package-btn">
-                            <button class="btn3">3</button>
-                        </div>
-                        <div class="package-content">
-                            <h5>Get Notified</h5>
-                            <p>About your cleaned laundry <br>pickup and enjoy.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 mockup-images-container">
-                    <div class="image-slider">
-                        <img src="images/mockup.png" class="image">
-                        <img src="images/mockup.png" class="image">
-                        <img src="images/mockup.png" class="image">
-                        <img src="images/mockup.png" class="image">
-                    </div>
-                </div>
-                <div class="col-sm-4 package-wrapper package-wrapper-right">
-                    <div class="desktop-view package-container package-top-positioned">
-                        <div class="package-btn">
-                            <button class="btn2">2</button>
-                        </div>
-                        <div class="package-content">
-                            <h5>Get Notified</h5>
-                            <p>Pack laundry and hang outside <br>for pickup.</p>
-                        </div>
-                    </div>
-                    <div class="mobile-view package-container hide">
-                        <div class="package-btn">
-                            <button class="btn3">3</button>
-                        </div>
-                        <div class="package-content">
-                            <h5>Get Notified</h5>
-                            <p>About your cleaned laundry <br>pickup and enjoy.</p>
-                        </div>
-                    </div>
-                    <div class="package-container">
-                        <div class="package-btn">
-                            <button class="btn4">4</button>
-                        </div>
-                        <div class="package-content">
-                            <h5>Chat Support</h5>
-                            <p>Chat with Ambassador regarding <br>any issue or question.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="img-wrapper">
+                <img src="images/hero-img.png" class="desktop-img">
+                <img src="images/hero-img-mobile.png" class="mobile-img">
             </div>
         </div>
-    </section>
 
-    <div id="pricingPlans" class="pricing-plans-container">
-        <div class="pricing-plans-heading">
-            <h3>PRICING PLANS</h3>
-            <div class="hr-line"></div>
-        </div>
-        <div class="pricing-plans-cards">
+        <section id="howItWorks" class="text-center how-it-works-section team-section">
             <div class="container">
+                <h3>HOW IT WORKS</h3>
+                <div class="hr-line"></div>
                 <div class="row justify-content-center">
-                    <div class="col-12 col-lg-3">
-                        <div class="card">
-                            <img class="card-img" src="images/gold-card.svg" alt="Card image cap">
-                            <div class="card-block">
-                                <h2 class="card-title">$89.95</h2>
-                                <ul>
-                                    <li>4 weeks</li>
-                                    <li>15 pounds per week</li>
-                                    <li>For any laundry that is above 15 pounds, the customer’s card will be Charged
-                                        $1.80
-                                        per pound.
-                                    </li>
-                                </ul>
+                    <div class="col-sm-4 package-wrapper package-wrapper-left">
+                        <div class="package-container package-top-positioned">
+                            <div class="package-btn">
+                                <button class="active-btn btn1">1</button>
+                            </div>
+                            <div class="package-content">
+                                <h5>Select Package</h5>
+                                <p>Pay for it, Using one of multiple <br>methods available.</p>
+                            </div>
+                        </div>
+                        <div class="mobile-view package-container hide">
+                            <div class="package-btn">
+                                <button class="btn2">2</button>
+                            </div>
+                            <div class="package-content">
+                                <h5>Get Notified</h5>
+                                <p>Pack laundry and hang outside <br>for pickup.</p>
+                            </div>
+                        </div>
+                        <div class="desktop-view package-container">
+                            <div class="package-btn">
+                                <button class="btn3">3</button>
+                            </div>
+                            <div class="package-content">
+                                <h5>Get Notified</h5>
+                                <p>About your cleaned laundry <br>pickup and enjoy.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-3">
-                        <div class="card">
-                            <img class="card-img" src="images/silver-card.svg" alt="Card image cap">
-                            <div class="card-block">
-                                <h2 class="card-title">$319.95</h2>
-                                <ul>
-                                    <li>4 weeks</li>
-                                    <li>15 pounds per week</li>
-                                    <li>For any laundry that is above 15 pounds, the customer’s card will be Charged
-                                        $1.80
-                                        per pound.
-                                    </li>
-                                </ul>
+                    <div class="col-sm-4 mockup-images-container">
+                        <div class="image-slider">
+                            <img src="images/mockup.png" class="image">
+                            <img src="images/mockup.png" class="image">
+                            <img src="images/mockup.png" class="image">
+                            <img src="images/mockup.png" class="image">
+                        </div>
+                    </div>
+                    <div class="col-sm-4 package-wrapper package-wrapper-right">
+                        <div class="desktop-view package-container package-top-positioned">
+                            <div class="package-btn">
+                                <button class="btn2">2</button>
+                            </div>
+                            <div class="package-content">
+                                <h5>Get Notified</h5>
+                                <p>Pack laundry and hang outside <br>for pickup.</p>
+                            </div>
+                        </div>
+                        <div class="mobile-view package-container hide">
+                            <div class="package-btn">
+                                <button class="btn3">3</button>
+                            </div>
+                            <div class="package-content">
+                                <h5>Get Notified</h5>
+                                <p>About your cleaned laundry <br>pickup and enjoy.</p>
+                            </div>
+                        </div>
+                        <div class="package-container">
+                            <div class="package-btn">
+                                <button class="btn4">4</button>
+                            </div>
+                            <div class="package-content">
+                                <h5>Chat Support</h5>
+                                <p>Chat with Ambassador regarding <br>any issue or question.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-3">
-                        <div class="card">
-                            <img class="card-img" src="images/bronze-card.svg" alt="Card image cap">
-                            <div class="card-block">
-                                <h2 class="card-title">$26.95</h2>
-                                <ul>
-                                    <li>4 weeks</li>
-                                    <li>15 pounds per week</li>
-                                    <li>For any laundry that is above 15 pounds, the customer’s card will be Charged
-                                        $1.80
-                                        per pound.
-                                    </li>
-                                </ul>
+                </div>
+            </div>
+        </section>
+
+        <div id="pricingPlans" class="pricing-plans-container">
+            <div class="pricing-plans-heading">
+                <h3>PRICING PLANS</h3>
+                <div class="hr-line"></div>
+            </div>
+            <div class="pricing-plans-cards">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-lg-3">
+                            <div class="card">
+                                <img class="card-img" src="images/gold-card.svg" alt="Card image cap">
+                                <div class="card-block">
+                                    <h2 class="card-title">$89.95</h2>
+                                    <ul>
+                                        <li>4 weeks</li>
+                                        <li>15 pounds per week</li>
+                                        <li>For any laundry that is above 15 pounds, the customer’s card will be Charged
+                                            $1.80
+                                            per pound.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <div class="card">
+                                <img class="card-img" src="images/silver-card.svg" alt="Card image cap">
+                                <div class="card-block">
+                                    <h2 class="card-title">$319.95</h2>
+                                    <ul>
+                                        <li>4 weeks</li>
+                                        <li>15 pounds per week</li>
+                                        <li>For any laundry that is above 15 pounds, the customer’s card will be Charged
+                                            $1.80
+                                            per pound.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <div class="card">
+                                <img class="card-img" src="images/bronze-card.svg" alt="Card image cap">
+                                <div class="card-block">
+                                    <h2 class="card-title">$26.95</h2>
+                                    <ul>
+                                        <li>4 weeks</li>
+                                        <li>15 pounds per week</li>
+                                        <li>For any laundry that is above 15 pounds, the customer’s card will be Charged
+                                            $1.80
+                                            per pound.
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <footer class="footer">
-        <div class="content-wrapper">
-            <div class="subscribe-section">
-                <h4>SUBSCRIBE FOR WEWASH</h4>
-                <p>Shop First Shop Smart Shop Better. Plus, Insider Offer<br> And Flash Sales In Your Inbox Every
-                    Week</p>
-                <form>
-                    <div class="subscribe-wrapper">
-                        <input type="email" name="EMAIL" class="email-input" placeholder="Enter your email" required>
-                        <input type="submit" value="Subscribe" name="subscribe" class="subscribe-button">
-                    </div>
-                </form>
-            </div>
-            <div class="copyright-section">
-                <div class="social-links">
-                    <a href="https://facebook.com"><img src="images/facebook-logo-button.svg"></a>
-                    <a href="https://twitter.com"><img src="images/twitter-logo-button.svg"></a>
-                    <a href="https://instagram.com"><img src="images/instagram-logo-button.svg"></a>
+        <footer class="footer">
+            <div class="content-wrapper">
+                <div class="subscribe-section">
+                    <h4>SUBSCRIBE FOR WEWASH</h4>
+                    <p>Shop First Shop Smart Shop Better. Plus, Insider Offer<br> And Flash Sales In Your Inbox Every
+                        Week</p>
+                    <form>
+                        <div class="subscribe-wrapper">
+                            <input type="email" name="EMAIL" class="email-input" placeholder="Enter your email"
+                                required>
+                            <input type="submit" value="Subscribe" name="subscribe" class="subscribe-button">
+                        </div>
+                    </form>
                 </div>
-                <p><a href="#">Terms and Conditions</a></p>
-                <p>&copy; 2019,WeWash</p>
+                <div class="copyright-section">
+                    <div class="social-links">
+                        <a href="https://facebook.com"><img src="images/facebook-logo-button.svg"></a>
+                        <a href="https://twitter.com"><img src="images/twitter-logo-button.svg"></a>
+                        <a href="https://instagram.com"><img src="images/instagram-logo-button.svg"></a>
+                    </div>
+                    <p><a href="#">Terms and Conditions</a></p>
+                    <p>&copy; 2019,WeWash</p>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script src="js/index.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="slick/slick.min.js"></script>
+        <script src="js/index.js"></script>
 </body>
 
 </html>
