--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/wewash.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
@@ -251,16 +251,9 @@
         <footer class="footer">
             <div class="content-wrapper">
                 <div class="subscribe-section">
-                    <h4>SUBSCRIBE FOR WEWASH</h4>
-                    <p>Shop First Shop Smart Shop Better. Plus, Insider Offer<br> And Flash Sales In Your Inbox Every
-                        Week</p>
-                    <form>
-                        <div class="subscribe-wrapper">
-                            <input type="email" name="EMAIL" class="email-input" placeholder="Enter your email"
-                                required>
-                            <input type="submit" value="Subscribe" name="subscribe" class="subscribe-button">
-                        </div>
-                    </form>
+                    <a href="index.html">
+                        <img class="logo" src="images/logo.svg" alt="WeWash Logo">
+                    </a>
                 </div>
                 <div class="copyright-section">
                     <div class="social-links">
@@ -278,7 +271,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="slick/slick.min.js"></script>
-        <script src="js/index.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
